Fix spacing on UI page

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -255,7 +255,7 @@ h3 {
     justify-content: space-between;
     align-items: center;
     background-color: rgb(244, 244, 244);
-    padding: 1rem 4rem;
+    padding: 1rem 2rem;
     box-shadow: -2px 2px 5px rgb(173, 173, 173);
 }
 
@@ -263,7 +263,6 @@ h3 {
     display: grid;
     grid-template-rows: repeat(auto-fit, 210px);
     gap: 2rem;
-    width: 50%;
 }
 
 #cartProductInfo {
@@ -277,10 +276,11 @@ h3 {
 }
 
 #checkoutContainer {
-    display: flex;
-    justify-content: space-evenly;
-    width: 80%;
-    gap: 3rem;
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    justify-content: center;
+    gap: 5rem;
+    width: 85%;
 }
 
 #quantity {
@@ -324,8 +324,6 @@ h3 {
 }
 
 #checkout {
-    width: 30%;
-    height: 200px;
     display: flex;
     flex-direction: column;
     gap: 1rem;
